@@ -6,6 +6,8 @@ Version 1.9.1+svn:
      * Added extra keeps to keep up with the growing number of leaders.
  * Language and i18n:
    * Updated translations: Indonesian, Russian
+ * User interface:
+   * Fixed: Addon dialog in title screen shows last host again.
 
 Version 1.9.1:
  * AI:
